*Empty MediaWiki Message*

--- a/کلبيان.mw
+++ b/کلبيان.mw
@@ -2,9 +2,16 @@
 
 
 کلبیان (Cynics)
-(فلسفه زندگی سگ گونه)
-(مهدی پدرام)
-یکی ازفلسفه های زیادی که از سقراط نشات گرفته است فلسفه کلبیون (Cynics) می باشد . موسس این مکتب آنتیستنس از شاگردان سقراط بود که در خصایل سقراط به قناعت ورزی او توجه بسیاری نشان داد. پیروان این مکتب را به دو دلیل کلبیان می نامند : دلیل اول محل تاسیس مدرسه آنها ست که سیناسارگس Cynosarges به معنای سگ سفید نامیده می شد . که در واقع ورزشگاهی در نزدیکی آتن بوده است.  دلیل دوم هم مربوط به نوع زندگی پیروان این مکتب می باشد.
+(د سپي ډوله ژوند فلسفه)
+
+یو هغو څو فلسفي ښوونځیو څخه ده، چې له سکرات څخه یې سرچینه اخیتسې د د کلبیانو فلسفه ده.
+
+ددې ښوونځي بنسټګر انتیستنس (د سکرات له زده کوونکیو څخه ګڼل کېږي) دی. 
+
+ددې ښوونځي لارویان په دوه وجو کلبیان یادېږي: 
+#--لومړې دا، چې په هغه ځای کې چې ددې ښوونځي بنسټ کېښودل شو، د سیناسارګس (Cynosarges) (سپین سپی) په نامه یادېږي.
+#-- 
+ پیروان این مکتب را به دو دلیل کلبیان می نامند : دلیل اول محل تاسیس مدرسه آنها ست که سیناسارگس Cynosarges به معنای سگ سفید نامیده می شد . که در واقع ورزشگاهی در نزدیکی آتن بوده است.  دلیل دوم هم مربوط به نوع زندگی پیروان این مکتب می باشد.
 کلبیون معتقد به الزام وجود تقوا و فضیلتی برای رسیدن به خوشبختی بودند. آنها این فضیلت را دور از مواردی مانند قدرت سیاسی , ثروت , موقعیت اجتماعی و یا رعایت قراردادهای اجتماعی میپنداشتند . به عقیده اینان زندگی خوب و درست زندگی مبتنی بر روال طبیعت و بی نیازی است . همسو با این نظر کلبیان توصیه به برگشت به زندگی طبیعی و دوری از قراردادها و ارزشهای اجتماعی و اجتناب از لذات می کردند . زندگی خود آنان نیز بدینگونه بود به طوریکه روشی ریاضت کشانه همراه بی اعتنایی به اجتماع و ارزشهای آن پیش گرفته بودند .
 به اعتقاد کلبیون در زندگی نباید نگران مرگ و تندرستی خود و بقیه بود و از بابت این امور نباید دلواپس و نگران شد . آنها در گفتار خود نیز زبانی نیش دار و گزنده داشتند , از همین رو امروزه در بعضی از زبانهای اوروپایی cynic به شخص طعنه گو و بدبین و بی توجه به سایرین اطلاق میشود .
 ضیلت و تقوای مورد نظر کلبیان به فراگیری خاصی نیاز نداشت  و کلا امور آموزش نظیر آموزش هندسه و موسیقی و ادبیات نزد آنان بی اهمیت بود . در فلسفه هم اهم توجه آنها به اخلاق می باشد .
