--- a/گلبدين_حکمتيار.mw
+++ b/گلبدين_حکمتيار.mw
@@ -93,8 +93,10 @@
 **[['''د قرآن قسمونه''']]:
 **[['''توحيد او شرك''']]:
 
-== '''اخځليكونه''' ==
+==بهرنې تړن==
 
+== '''اخځليكونه''' ==
+[[د افغانستان اسلامي حزب]]
 **[[اسلامي غورځنګ ]]
 
 
