--- a/گلبدين_حکمتيار.mw
+++ b/گلبدين_حکمتيار.mw
@@ -94,6 +94,7 @@
 **[['''توحيد او شرك''']]:
 
 ==بهرنې تړن==
+** [http://tanweer2.blogfa.com/ د اسلامي حزب په اړه یو مالوماتي بلاګ]
 
 == '''اخځليكونه''' ==
 [[د افغانستان اسلامي حزب]]
