--- a/د_افغانستان_اسلامي_حزب.mw
+++ b/د_افغانستان_اسلامي_حزب.mw
@@ -1,9 +1,14 @@
 د افغانستان اسلامي حزب د نړۍ په کچه پېژندل شوې اسلامي غورځنګ دی، چې د افغانستان کې د ډېموکراسۍ د لسیزې د هغو لادیني او د اسلام ضد کړنو پر وړاندې د یوه ... منظم اسلامي غورځنګ په توګه د کابل پوهنتون په ناکراره چاپېریال کې رامځ ته شو، چې د لږ وخت په تېرېدو سره یې په افغان ولس کې قوي ریښې وزغلولې، او له بشپړ ګرانښت یې پیدا کړ.
 
 
+==د جوړښت پیلامه==
+د افغانستان اسلامي حزب په لومړنیو مراحلو کې د افغانستان له ۱۶ تنو کره، پوهو، کارنده او په اسلام و هېواد مینو ځوانو په کوښښ د کابل پوهنتو په انګړ کې بنسټ کېښودل شو.
 
+د غورځنګ په دې لومړي سر کې له یوه بل اږمیښت سره مخ شو، او هغه ددې غورځنګ د مخکښ (شهید عبدالرحیم نیازی) مړینه وه، چې د د ظاهرشاهي پیر د یوه څارګر ډاکټر لخوا د زهرو پیچکارۍ په کولو سره یې ناروغي نوره پسې وغځېده، او د سملاسي درملنې لپاره د هند هېواد ته ولېدول شو، مګر ژوند ورسره یاري ونکړه، او لې لورې یې جنازه بېرته د کابل پر لور راوړله.
 
-حزب اسلامى افغانستان که در مراحل نخست با مشوره، کار وتلاش ١٢ تن از شخصيت هاى نخبه ، الگو ، آگاه و متحرک کشور در پوهنتون کابل تاسيس شده که پس از وفات مرحوم عبدالرحيم نيازى ٢٦٠ تن اهل رأى به شورى قيادى پنج عضوى هر يک مولوى حبيب الرحمن شهيد، انجينير حبيب الرحمن شهيد، سيف الدين نصرتيار شهيد، غلام ربانى عطيش شهيد، وبرادر حکمتيار رأى دادند. در مدت سالهاى محدود بنابر فعاليت هاى چشمگير اين حزب به تعداد يازده تن از آن شخصيت هاى والا مقام به شهادت رسيده و تنها برادر محترم جناب حکمتيار صاحب تاکنون طبق مشيت الهى درقيد حيات مانده  و با کمال آگاهى ، بيدارى، تحرک وراد مردى باداشتن عزم پولادين على الرعم خشم وتوطئه هاى سرسام آور دشمنان اسلام، به کارو پيکارش ادامه ميدهند.
+د شهيد نیازي له مړینې څخه وروسته د ۷۶۰ رایه ورکوونکو لخوا پینځو تنو هریو (شهید مولوي حبیب الرحمن، شهید انجینیر حبیب الرحمن، شهید سیف الدین نصرتیار، شهید غلام رباني عطیش او ښاغلي انجینیر ګلبدین حکمتیار) ته خپلې رای ورکړي.
+
+==سیبسیب== شهيد، غلام ربانى عطيش شهيد، وبرادر حکمتيار رأى دادند. در مدت سالهاى محدود بنابر فعاليت هاى چشمگير اين حزب به تعداد يازده تن از آن شخصيت هاى والا مقام به شهادت رسيده و تنها برادر محترم جناب حکمتيار صاحب تاکنون طبق مشيت الهى درقيد حيات مانده  و با کمال آگاهى ، بيدارى، تحرک وراد مردى باداشتن عزم پولادين على الرعم خشم وتوطئه هاى سرسام آور دشمنان اسلام، به کارو پيکارش ادامه ميدهند.
 آن عده از شخصيت هاى بارز وکليدى اين حزب که به شهادت رسيده اند، از خود آثارى بجا گذاشته اند که عدۀ از آنها قرار ذيل است: 
 ١ – د اقتصاد اهميت په اسلام او کمونيزم کښې ــ اثر استاد مرحوم عبدالرحيم نيازى 
 ٢ -   جهان بينى اسلامى ــ اثر انجينير حبيب الرحمن شهيد 
