--- a/د_افغانستان_اسلامي_حزب.mw
+++ b/د_افغانستان_اسلامي_حزب.mw
@@ -7,15 +7,16 @@
 د غورځنګ په دې لومړي سر کې له یوه بل اږمیښت سره مخ شو، او هغه ددې غورځنګ د مخکښ (شهید عبدالرحیم نیازی) مړینه وه، چې د د ظاهرشاهي پیر د یوه څارګر ډاکټر لخوا د زهرو پیچکارۍ په کولو سره یې ناروغي نوره پسې وغځېده، او د سملاسي درملنې لپاره د هند هېواد ته ولېدول شو، مګر ژوند ورسره یاري ونکړه، او لې لورې یې جنازه بېرته د کابل پر لور راوړله.
 
 د شهيد نیازي له مړینې څخه وروسته د ۷۶۰ رایه ورکوونکو لخوا پینځو تنو هریو (شهید مولوي حبیب الرحمن، شهید انجینیر حبیب الرحمن، شهید سیف الدین نصرتیار، شهید غلام رباني عطیش او ښاغلي انجینیر ګلبدین حکمتیار) ته خپلې رای ورکړي.
+له پورته پینځو تنو څخ ټول په شهات رسېدلي، یواځې انجنییر صېب حکتیار تردې دمه د لوی څښتن په فضل ژوند دی، او ددې غورځنګ چارې او مشري سمبالوي. 
 
-==سیبسیب== شهيد، غلام ربانى عطيش شهيد، وبرادر حکمتيار رأى دادند. در مدت سالهاى محدود بنابر فعاليت هاى چشمگير اين حزب به تعداد يازده تن از آن شخصيت هاى والا مقام به شهادت رسيده و تنها برادر محترم جناب حکمتيار صاحب تاکنون طبق مشيت الهى درقيد حيات مانده  و با کمال آگاهى ، بيدارى، تحرک وراد مردى باداشتن عزم پولادين على الرعم خشم وتوطئه هاى سرسام آور دشمنان اسلام، به کارو پيکارش ادامه ميدهند.
-آن عده از شخصيت هاى بارز وکليدى اين حزب که به شهادت رسيده اند، از خود آثارى بجا گذاشته اند که عدۀ از آنها قرار ذيل است: 
-١ – د اقتصاد اهميت په اسلام او کمونيزم کښې ــ اثر استاد مرحوم عبدالرحيم نيازى 
-٢ -   جهان بينى اسلامى ــ اثر انجينير حبيب الرحمن شهيد 
-٣ -    حقايق و قضاوت ها ــ اثر انجينير حبيب الرحمن شهيد 
-٤ -   به شما اى فرزندان ميهن ــ اثر دوکتور محمدعمر شهيد 
-٥ -   حدوث جهان ــ اثر شهيد اقا محمد عائل 
-٦ -    مونږ او زمونږ دعوت ــ اثر شهيد استاد عنايت الله 
+===د غورځنګ د شهیدو شویو غړو لیکلي اثار===
+د غورځنګ هغه برجسته غړي چې په شهادت رسول شوي، لاندې لیکنې ورځخه پاتې دی: 
+# د اقتصاد اهميت په اسلام او کمونيزم کښېـ لیکوال:استاد شهید عبدالرحيم نيازى 
+# جهان بينى اسلامى ـ لیکوا: شهید انجينير حبيب الرحمن.
+# حقايق و قضاوت ها ـ لیکوال: شهید انجينير حبيب الرحمن.
+# به شما اى فرزندان ميهن ـ لیکوال:ډاکټر محمدعمر.
+# حدوث جهان ـ لیکوال: شهيد اقا محمد عائل
+# مونږ او زمونږ دعوت ـ لیکوا: شهيد استاد عنايت الله>
 مشخصات عمده اين حزب:
 ١ -  حزب اسلامى افغانستان به عنوان يک حزب اصولى وهدفمند، داراى اساسنامه، مرامنامه ومسئوليت هاى عضو مى باشد.
 ٢ – اين حزب به عنوان مؤسس مبارزه وجهاد درمقابل دشمنان داخلى وخارجى عليه اسلام ، مخصوصاً متجاوزين، طى اين سه دهه مى باشد، طوريکه هم درمقابل روسها وهم در مقابل امريکايى هاى متجاوز براى نخستين بار قبل از همه عَلَم مخالفت، مبارزه وجهاد عملى را بلند نموده است.
