--- a/گلبدين_حکمتيار.mw
+++ b/گلبدين_حکمتيار.mw
@@ -92,13 +92,13 @@
 # حقيقت نفاق از ديگاه قرآن 
 # جنگ از ديگاه قرآن 
 # کليد قرآن 
-#  جلوه هايى ازاسرار قرآن جزء ٢٩و ٣٠  ( وپشتوى آن (( د قرآن پلوشې )) هر يک در دو دو جلد )  
-# دقرآن پلوشې جلد اول (شامل سوره هاى الفاتحه ، البقره والنسأ) 
-#  دقرآن پلوشې جلد دوم (شامل سوره هاى المائده ، الانعام ،الاعراف و الانفال)
-# از سوره يوسف بياموزيم ( درى و پشتو)
-#اسرار نماز ( درى وپشتو)
+# جلوه هايى ازاسرار قرآن جزء ٢٩و ٣٠  ( او پښتو یې(( د قرآن پلوشې )) هر یو په دوه، دوه ټوکو کې)  
+# دقرآن پلوشې لومړې ټوک (د الفاتحه سورت ، البقره او النسأ) سورتونو تفسیر دی.
+# دقرآن پلوشې دویم ټوک (د المائده، الانعام،الاعراف او الانفال) سورتونو تفسیر دی.
+# از سوره يوسف بياموزيم ( درى و پښتو)
+#اسرار نماز ( درى وپښتو)
 # اسلامى نهضت 
-#  دسايس پنهان وچهره هاى عريان ( درى ، پشتو وعربى)
+# پټې توتیې بربنډې څېرې ( درى، پښتو وعربى)
 # خدا ، قرآن، انسان
 # عقيدۀ ما 
 # شيوه هاى انتخاب زعامت در جامعۀ اسلامى 
@@ -106,29 +106,29 @@
 # در پاسخ به مخملباف 
 # بايبل د قرآن په رڼا کې ( بهترين شهکارعلمى ، سياسى و تحقيقى در ٨٧١ صفحه بزرگ ) 
 # جهان بينى توحيدى 
-#د امريکا ضد اسلامى جهاد _ ژور اسرار مهم اسناد 
-#  تجلى ايمان در قول وعمل
+# د امريکا ضد اسلامى جهاد _ ژور اسرار مهم اسناد 
+# تجلى ايمان در قول وعمل
 # مرگ ژوند په قرآن کې 
- قرآن وملت هاى اسير
+# قرآن وملت هاى اسير
 # دقرآن قَسَمونه 
 # انفاق در قرآن 
 # هماغه د اسلام تاريخى لار 
 # اساسى قانون 
 # کوم اساسى قانون د منلو وړ دى ؟
 # درسى ازعاشورى حسين 
-#  د انقلاب درى مهمى قضيي او زمونږ دريځ
+# د انقلاب درى مهمى قضيي او زمونږ دريځ
 # درسى از ميلاد 
-# امت اسلامى ( درى وپشتو ) 
-#  معلم يا دفکرى سنگر قوماندان 
+# امت اسلامى ( درى و پښتو ) 
+# معلم يا دفکرى سنگر قوماندان 
 # فکر آخرت 
 # په الله ايمان معنى، دلائل اوغوښتنى يى 
-#  په ملائکو او قضا وقدر ايمان معنى، دلايل اوغوښتنى يى  
+# په ملائکو او قضا وقدر ايمان معنى، دلايل اوغوښتنى يى  
 # په کتابونو ايمان معنى، دلائل اوغوښتنى يى 
 # په پيامبرانو ايمان معنى ، دلائل اوغوښتنى يى 
 # په آخرت ايمان معنى، دلايل او غوښتنى يى
-#  حاميان سنگر فرعون 
-#  خندق داران آتش
-#  مسؤل قوماندان ته خطاب 
+# حاميان سنگر فرعون 
+# خندق داران آتش
+# مسؤل قوماندان ته خطاب 
 # حقيقت شرک و توحيد ( پشتو ودرى ) 
 # ابراهيم در آزمون خدا 
 # خطاب به مهاجرين ( پشتو و درى ) 
@@ -136,26 +136,26 @@
 # موقف ما و جريانات اخير 
 # موالات ؟
 # حل سياسى قضيه افغانستان 
-# سيد احمد شهيد ( ترجمه )
+# سيد احمد شهيد ( ژباړه )
 # د اسلام تير برم ته د رسيدو لار  
-#  دافغانستان د اسلامى حکومت تگلاره 
-#  قومى مشرانو ته خطاب 
-#   د جهاد دبرياليتوب راز 
+# دافغانستان د اسلامى حکومت تگلاره 
+# قومى مشرانو ته خطاب 
+# د جهاد دبرياليتوب راز 
 # جايگاه زن در اسلام 
-#  اور بند (!) او زمونږ دريځ (پشتو و درى) 
+# اور بند (!) او زمونږ دريځ (پښتو و درى) 
 # مهاجرينو ته څو توصيى 
 # 11 دسپتمبر ــ  مرکى او مقالى 
 # عروج  و نزول ملت ها 
 # د آزادى لار 
-#  نهضت و عناصر فرصت طلب 
+# نهضت و عناصر فرصت طلب 
 # چه نوع اتحاد؟ 
 # شعر وعرفان در محک قرآن 
 # مشکلات سياسى ــ مذهبى افغانها 
 # بحران ، مشکلات و راه حل ها  
-# د دکابل غم ولى ؟
+# د د کابل غم ولى ؟
 # ويژگيهاى صف اسلامى 
 # د فتحى کاروان 
-# قيادت حزب اسلامى افغانستان:
+# قيادت حزب اسلامى افغانستان.
 اين حزب داراى قيادت مجاهد، مدبر وبابصيرتى است که در فرازونشيب انقلاب اسلامى سخت آبديده شده و برا زندگى هاى لازمى اى را  که براى يک رهبر مسلمان آنهم براى يک تنظيم فکرى، جهادى و مبارزاتى در سطح کشور، منطقه وجهان لازم است، درايشان جمع شده است.
 در پهلوى تمامى خصائل مثبت و امتيازى علمى، اخلاقى، سياسى، مبارزاتى و اجتماعى ايشان چه در دوران تحصيل، جريان مبارزه در پوهنتون کابل، بعد ازهجرت، دوران رهبرى سياسى و فکرى جهاد  ومبارزه در سطح کشور، کارنامۀ فراموش ناشدنى عدم ملاقات باريگان رئيس جمهور وقت امريکاست، که ايشان با حضور داشت در نيويارک غرض اشتراک دريکى از کنفرانس هاى سازمان ملل متحد،با وجود اصرار و تاکيد شخص رئيس جمهور امريکا، ديگر دوستان وشخصيت هاى داخلى وخارجى، بخاطر حفظ عزت ، آبرو واستقلاليت جهاد و مجاهدين افغانستان، باکمال استغنا، آنرا رد نموده و ازملاقى شدند باريگان که در قصر سفيد سخت انتظار شان بود، جداً اباورزيدندو بدين ترتيب لحظاتى را که رئيس جمهور وقت امريکا مى خواست تا برادر حکمتيار در ملاقات وى بگذرانند ، بجاى ديدار به ريگان ــ در مجلس جمع از هموطنان مهاجر خويش اشتراک نموده و جوياى احوال ايشان شدند!!
 برادر حکمتيار باوجود مصروفيت هاى جهادى وسياسى در طول دوران جهاد ومبارزه، نسبت به هر شخصيت علمى ومبارزاتى در کشور، بيشترين  و بهترين  آثار علمى ، سياسى و دعوتى را به جامعه، کشور وجهان اسلام تقديم نموده اند که از برخى ، قرار ذيل ياد آورى مى شود:
@@ -165,13 +165,7 @@
 در رابطه با وسعت و گستردگى حزب اسلامى افغانستان در عمق جامعۀ کشور ، تنها انعکاس همين حقيقت کافى خواهد بود که يک هيأت توظيف شدۀ ناتو،  در اوايل اپريل سال ٢٠٠٤ ميلادى طى بررسى و ارزيابى يى در مقايسه با ساير احزاب در کشور، در رابطه با حزب اسلامى افغانستان به اين نتيجه رسيدند که : حزب اسلامى افغانستان جايگاه (( %٨٥ )) نفوذ و استقرار در اين مرز و بوم را با طيب خاطر ، به خود اختصاص داده است .
 يقيناً که حزب اسلامى افغانستان در مدت زمان خيلى کوتاهى به قيمت ايثار، قربانى وتلاش هاى فراموش ناشدنى ، در مقايسه با ساير احزاب اسلامى در جهان نسبت به  حزب دو چند عمر دارند ، فاصله هاى طولانى و شگفت انگيزى را از رهگذر دستيابى  به اهداف خويش در عرصه هاى ملى وبين المللى کسب نموده است .
 چنانچه مرحوم سعيد حوى رهبر اخوان المسلمين در سوريه ٢٣ سال قبل طى سخنرانى اش در مسجد جامع نصرت مينه ، اعضا وکارکنان حزب اسلامى را مورد خطاب قرار داده و گفت که : ما از تجارب موفق و آمو زنده  حزب اسلامى در روند مبارزاتى خويش همواره  استفاده مى کنيم .
-خلاصه اينکه حزب اسلامى افغانستان باداشتن سابقۀ روشن، تابناک و درخشان، رهبرى خردمندانه، بيدار وحساس، افراد مخلص، مجاهد وفداکار، در تمامى ولايات افغانستان ودر سطح اکثر کشورها، همين اکنون فعال ومتحرک بوده وگفته مى توانيم که از زنده ترين و بانشاط ترين احزاب اسلامى دنيا بوده و مى باشد.  
-
-
-
-** [['''د قرآن پلوشې''']]: د كتاب د سپېڅلي قرآن ژباړې او تفسير په اړه دى، چې د لومړيو پينځو اجزاو ژباړه او تفسير يې د چاپ په جامه پوښل شوې، او نورې برخې پې پر لار دي.
-**[['''د قرآن قسمونه''']]:
-**[['''توحيد او شرك''']]:
+خلاصه اينکه حزب اسلامى افغانستان باداشتن سابقۀ روشن، تابناک و درخشان، رهبرى خردمندانه، بيدار وحساس، افراد مخلص، مجاهد وفداکار، در تمامى ولايات افغانستان ودر سطح اکثر کشورها، همين اکنون فعال ومتحرک بوده وگفته مى توانيم که از زنده ترين و بانشاط ترين احزاب اسلامى دنيا بوده و مى باشد.
 
 ==بهرنې تړن==
 ** [http://tanweer2.blogfa.com/ د اسلامي حزب په اړه یو مالوماتي بلاګ]
