--- a/گلبدين_حکمتيار.mw
+++ b/گلبدين_حکمتيار.mw
@@ -87,31 +87,43 @@
 په لاندې ډول به د هغو كتابونو نومونه ياد كړو چې دوي ليكلي:
 
 
-===ديني ليكنې:===
-# تقدم  شعور برماده 
-# حقيقت نفاق از ديگاه قرآن 
-# جنگ از ديگاه قرآن 
+===پوهنیز او ديني ليكنې:===
 # کليد قرآن 
-# جلوه هايى ازاسرار قرآن جزء ٢٩و ٣٠  ( او پښتو یې(( د قرآن پلوشې )) هر یو په دوه، دوه ټوکو کې)  
+# دقرآن قَسَمونه 
+# انفاق در قرآن 
+# جايگاه زن در اسلام 
+# تقدم  شعور برماده 
+# جنگ از ديگاه قرآن 
+# قرآن وملت هاى اسير
+# خدا ، قرآن، انسان
+# مرگ ژوند په قرآن کې 
+# ابراهيم در آزمون خدا
+# تجلى ايمان در قول وعمل
+#اسرار نماز ( درى وپښتو)
+# شعر وعرفان در محک قرآن
+# حقيقت نفاق از ديگاه قرآن 
+# حقيقت شرک و توحيد( پشتو ودرى)
+# په الله ايمان معنى، دلائل اوغوښتنى يى 
+# په آخرت ايمان معنى، دلايل او غوښتنى يى
+# په کتابونو ايمان معنى، دلائل اوغوښتنى يى 
+# په پيامبرانو ايمان معنى ، دلائل اوغوښتنى يى 
+# په ملائکو او قضا وقدر ايمان معنى، دلايل اوغوښتنى يى  
+# از سوره يوسف بياموزيم ( درى و پښتو)
 # دقرآن پلوشې لومړې ټوک (د الفاتحه سورت ، البقره او النسأ) سورتونو تفسیر دی.
 # دقرآن پلوشې دویم ټوک (د المائده، الانعام،الاعراف او الانفال) سورتونو تفسیر دی.
-# از سوره يوسف بياموزيم ( درى و پښتو)
-#اسرار نماز ( درى وپښتو)
+# بايبل د قرآن په رڼا کې ( بهترين شهکارعلمى ، سياسى و تحقيقى در ٨٧١ صفحه بزرگ )
+# جلوه هايى ازاسرار قرآن جزء ٢٩و ٣٠  ( او پښتو یې(( د قرآن پلوشې )) هر یو په دوه، دوه ټوکو کې)  
+===سیاسي لیکنې===
 # اسلامى نهضت 
-# پټې توتیې بربنډې څېرې ( درى، پښتو وعربى)
-# خدا ، قرآن، انسان
 # عقيدۀ ما 
+# پټې توتیې بربنډې څېرې ( درى، پښتو وعربى)
 # شيوه هاى انتخاب زعامت در جامعۀ اسلامى 
 # راه هاى حل بحران افغانستان 
 # در پاسخ به مخملباف 
-# بايبل د قرآن په رڼا کې ( بهترين شهکارعلمى ، سياسى و تحقيقى در ٨٧١ صفحه بزرگ ) 
+ 
 # جهان بينى توحيدى 
 # د امريکا ضد اسلامى جهاد _ ژور اسرار مهم اسناد 
-# تجلى ايمان در قول وعمل
-# مرگ ژوند په قرآن کې 
-# قرآن وملت هاى اسير
-# دقرآن قَسَمونه 
-# انفاق در قرآن 
+
 # هماغه د اسلام تاريخى لار 
 # اساسى قانون 
 # کوم اساسى قانون د منلو وړ دى ؟
@@ -121,16 +133,9 @@
 # امت اسلامى ( درى و پښتو ) 
 # معلم يا دفکرى سنگر قوماندان 
 # فکر آخرت 
-# په الله ايمان معنى، دلائل اوغوښتنى يى 
-# په ملائکو او قضا وقدر ايمان معنى، دلايل اوغوښتنى يى  
-# په کتابونو ايمان معنى، دلائل اوغوښتنى يى 
-# په پيامبرانو ايمان معنى ، دلائل اوغوښتنى يى 
-# په آخرت ايمان معنى، دلايل او غوښتنى يى
 # حاميان سنگر فرعون 
 # خندق داران آتش
 # مسؤل قوماندان ته خطاب 
-# حقيقت شرک و توحيد ( پشتو ودرى ) 
-# ابراهيم در آزمون خدا 
 # خطاب به مهاجرين ( پشتو و درى ) 
 # د اسلامى حکومت په وړاندى خنډونه
 # موقف ما و جريانات اخير 
@@ -141,7 +146,6 @@
 # دافغانستان د اسلامى حکومت تگلاره 
 # قومى مشرانو ته خطاب 
 # د جهاد دبرياليتوب راز 
-# جايگاه زن در اسلام 
 # اور بند (!) او زمونږ دريځ (پښتو و درى) 
 # مهاجرينو ته څو توصيى 
 # 11 دسپتمبر ــ  مرکى او مقالى 
@@ -149,7 +153,7 @@
 # د آزادى لار 
 # نهضت و عناصر فرصت طلب 
 # چه نوع اتحاد؟ 
-# شعر وعرفان در محک قرآن 
+
 # مشکلات سياسى ــ مذهبى افغانها 
 # بحران ، مشکلات و راه حل ها  
 # د د کابل غم ولى ؟
