--- a/گلبدين_حکمتيار.mw
+++ b/گلبدين_حکمتيار.mw
@@ -114,52 +114,50 @@
 # بايبل د قرآن په رڼا کې ( بهترين شهکارعلمى ، سياسى و تحقيقى در ٨٧١ صفحه بزرگ )
 # جلوه هايى ازاسرار قرآن جزء ٢٩و ٣٠  ( او پښتو یې(( د قرآن پلوشې )) هر یو په دوه، دوه ټوکو کې)  
 ===سیاسي لیکنې===
-# اسلامى نهضت 
+# موالات؟
 # عقيدۀ ما 
-# پټې توتیې بربنډې څېرې ( درى، پښتو وعربى)
-# شيوه هاى انتخاب زعامت در جامعۀ اسلامى 
+# فکر آخرت 
+# اسلامى نهضت
+# اساسى قانون
+# د آزادى لار 
+# درسى از ميلاد
+# چه نوع اتحاد؟
+# د فتحى کاروان 
+# خندق داران آتش
+# جهان بينى توحيدى
+# د د کابل غم ولى؟
+# ويژگيهاى صف اسلامى 
+# حاميان سنگر فرعون 
+# درسى ازعاشورى حسين 
+# در پاسخ به مخملباف
+# عروج  و نزول ملت ها
+# قومى مشرانو ته خطاب
+# مهاجرينو ته څو توصيى
+# نهضت و عناصر فرصت طلب
+# هماغه د اسلام تاريخى لار
+# سيد احمد شهيد ( ژباړه) 
+# د جهاد دبرياليتوب راز
+# مسؤل قوماندان ته خطاب
+# موقف ما و جريانات اخير
+# حل سياسى قضيه افغانستان   
+# امت اسلامى ( درى و پښتو)
+# بحران ، مشکلات و راه حل ها
+# 11 دسپتمبر ـ مرکى او مقالى 
+# مشکلات سياسى ـ مذهبى افغانها   
+# قيادت حزب اسلامى افغانستان 
 # راه هاى حل بحران افغانستان 
-# در پاسخ به مخملباف 
- 
-# جهان بينى توحيدى 
+# د اسلام تير برم ته د رسيدو لار
+# معلم يا دفکرى سنگر قوماندان
+# کوم اساسى قانون د منلو وړ دى؟ 
+# خطاب به مهاجرين ( پشتو و درى) 
+# د اسلامى حکومت په وړاندى خنډونه  
+# دافغانستان د اسلامى حکومت تگلاره 
+# د انقلاب درى مهمى قضيي او زمونږ دريځ
+# شيوه هاى انتخاب زعامت در جامعۀ اسلامى
+# اور بند (!) او زمونږ دريځ (پښتو و درى) 
+# پټې توتیې بربنډې څېرې ( درى، پښتو وعربى) 
 # د امريکا ضد اسلامى جهاد _ ژور اسرار مهم اسناد 
 
-# هماغه د اسلام تاريخى لار 
-# اساسى قانون 
-# کوم اساسى قانون د منلو وړ دى ؟
-# درسى ازعاشورى حسين 
-# د انقلاب درى مهمى قضيي او زمونږ دريځ
-# درسى از ميلاد 
-# امت اسلامى ( درى و پښتو ) 
-# معلم يا دفکرى سنگر قوماندان 
-# فکر آخرت 
-# حاميان سنگر فرعون 
-# خندق داران آتش
-# مسؤل قوماندان ته خطاب 
-# خطاب به مهاجرين ( پشتو و درى ) 
-# د اسلامى حکومت په وړاندى خنډونه
-# موقف ما و جريانات اخير 
-# موالات ؟
-# حل سياسى قضيه افغانستان 
-# سيد احمد شهيد ( ژباړه )
-# د اسلام تير برم ته د رسيدو لار  
-# دافغانستان د اسلامى حکومت تگلاره 
-# قومى مشرانو ته خطاب 
-# د جهاد دبرياليتوب راز 
-# اور بند (!) او زمونږ دريځ (پښتو و درى) 
-# مهاجرينو ته څو توصيى 
-# 11 دسپتمبر ــ  مرکى او مقالى 
-# عروج  و نزول ملت ها 
-# د آزادى لار 
-# نهضت و عناصر فرصت طلب 
-# چه نوع اتحاد؟ 
-
-# مشکلات سياسى ــ مذهبى افغانها 
-# بحران ، مشکلات و راه حل ها  
-# د د کابل غم ولى ؟
-# ويژگيهاى صف اسلامى 
-# د فتحى کاروان 
-# قيادت حزب اسلامى افغانستان.
 اين حزب داراى قيادت مجاهد، مدبر وبابصيرتى است که در فرازونشيب انقلاب اسلامى سخت آبديده شده و برا زندگى هاى لازمى اى را  که براى يک رهبر مسلمان آنهم براى يک تنظيم فکرى، جهادى و مبارزاتى در سطح کشور، منطقه وجهان لازم است، درايشان جمع شده است.
 در پهلوى تمامى خصائل مثبت و امتيازى علمى، اخلاقى، سياسى، مبارزاتى و اجتماعى ايشان چه در دوران تحصيل، جريان مبارزه در پوهنتون کابل، بعد ازهجرت، دوران رهبرى سياسى و فکرى جهاد  ومبارزه در سطح کشور، کارنامۀ فراموش ناشدنى عدم ملاقات باريگان رئيس جمهور وقت امريکاست، که ايشان با حضور داشت در نيويارک غرض اشتراک دريکى از کنفرانس هاى سازمان ملل متحد،با وجود اصرار و تاکيد شخص رئيس جمهور امريکا، ديگر دوستان وشخصيت هاى داخلى وخارجى، بخاطر حفظ عزت ، آبرو واستقلاليت جهاد و مجاهدين افغانستان، باکمال استغنا، آنرا رد نموده و ازملاقى شدند باريگان که در قصر سفيد سخت انتظار شان بود، جداً اباورزيدندو بدين ترتيب لحظاتى را که رئيس جمهور وقت امريکا مى خواست تا برادر حکمتيار در ملاقات وى بگذرانند ، بجاى ديدار به ريگان ــ در مجلس جمع از هموطنان مهاجر خويش اشتراک نموده و جوياى احوال ايشان شدند!!
 برادر حکمتيار باوجود مصروفيت هاى جهادى وسياسى در طول دوران جهاد ومبارزه، نسبت به هر شخصيت علمى ومبارزاتى در کشور، بيشترين  و بهترين  آثار علمى ، سياسى و دعوتى را به جامعه، کشور وجهان اسلام تقديم نموده اند که از برخى ، قرار ذيل ياد آورى مى شود:
