--- a/گلبدين_حکمتيار.mw
+++ b/گلبدين_حکمتيار.mw
@@ -173,9 +173,7 @@
 ** [http://tanweer2.blogfa.com/ د اسلامي حزب په اړه یو مالوماتي بلاګ]
 
 == '''اخځليكونه''' ==
-[[د افغانستان اسلامي حزب]]
-**[[اسلامي غورځنګ ]]
-
+**[[اسلامي غورځنګ]]، لیکوال: انجنییر ګلبدالدین حکمتیار
 
 [[وېشنيزه:۱۹۴۷ز زوكړي]]
 [[وېشنيزه:ژوندي خلک]]
