--- a/گلبدين_حکمتيار.mw
+++ b/گلبدين_حکمتيار.mw
@@ -169,6 +169,10 @@
 چنانچه مرحوم سعيد حوى رهبر اخوان المسلمين در سوريه ٢٣ سال قبل طى سخنرانى اش در مسجد جامع نصرت مينه ، اعضا وکارکنان حزب اسلامى را مورد خطاب قرار داده و گفت که : ما از تجارب موفق و آمو زنده  حزب اسلامى در روند مبارزاتى خويش همواره  استفاده مى کنيم .
 خلاصه اينکه حزب اسلامى افغانستان باداشتن سابقۀ روشن، تابناک و درخشان، رهبرى خردمندانه، بيدار وحساس، افراد مخلص، مجاهد وفداکار، در تمامى ولايات افغانستان ودر سطح اکثر کشورها، همين اکنون فعال ومتحرک بوده وگفته مى توانيم که از زنده ترين و بانشاط ترين احزاب اسلامى دنيا بوده و مى باشد.
 
+==دا هم وګورﺉ==
+
+**[[د افغانستان اسلامي حزب]]
+
 ==بهرنې تړن==
 ** [http://tanweer2.blogfa.com/ د اسلامي حزب په اړه یو مالوماتي بلاګ]
 
