--- a/گلبدين_حکمتيار.mw
+++ b/گلبدين_حکمتيار.mw
@@ -158,16 +158,10 @@
 # پټې توتیې بربنډې څېرې ( درى، پښتو وعربى) 
 # د امريکا ضد اسلامى جهاد _ ژور اسرار مهم اسناد 
 
-اين حزب داراى قيادت مجاهد، مدبر وبابصيرتى است که در فرازونشيب انقلاب اسلامى سخت آبديده شده و برا زندگى هاى لازمى اى را  که براى يک رهبر مسلمان آنهم براى يک تنظيم فکرى، جهادى و مبارزاتى در سطح کشور، منطقه وجهان لازم است، درايشان جمع شده است.
-در پهلوى تمامى خصائل مثبت و امتيازى علمى، اخلاقى، سياسى، مبارزاتى و اجتماعى ايشان چه در دوران تحصيل، جريان مبارزه در پوهنتون کابل، بعد ازهجرت، دوران رهبرى سياسى و فکرى جهاد  ومبارزه در سطح کشور، کارنامۀ فراموش ناشدنى عدم ملاقات باريگان رئيس جمهور وقت امريکاست، که ايشان با حضور داشت در نيويارک غرض اشتراک دريکى از کنفرانس هاى سازمان ملل متحد،با وجود اصرار و تاکيد شخص رئيس جمهور امريکا، ديگر دوستان وشخصيت هاى داخلى وخارجى، بخاطر حفظ عزت ، آبرو واستقلاليت جهاد و مجاهدين افغانستان، باکمال استغنا، آنرا رد نموده و ازملاقى شدند باريگان که در قصر سفيد سخت انتظار شان بود، جداً اباورزيدندو بدين ترتيب لحظاتى را که رئيس جمهور وقت امريکا مى خواست تا برادر حکمتيار در ملاقات وى بگذرانند ، بجاى ديدار به ريگان ــ در مجلس جمع از هموطنان مهاجر خويش اشتراک نموده و جوياى احوال ايشان شدند!!
-برادر حکمتيار باوجود مصروفيت هاى جهادى وسياسى در طول دوران جهاد ومبارزه، نسبت به هر شخصيت علمى ومبارزاتى در کشور، بيشترين  و بهترين  آثار علمى ، سياسى و دعوتى را به جامعه، کشور وجهان اسلام تقديم نموده اند که از برخى ، قرار ذيل ياد آورى مى شود:
 
- و –......................................
-برادر حکمتيارپس از تجاوز امريکا در افغانستان  تا ايندم درخلال هفت سال جهاد ومبارزه مطابق با مقتضيات اين دور و زمان، علاوه از نوشتن چندين کتب، اعلاميه ها، مصاحبه ها ومضامين مختلف، در حدود شش هزار خط، نامه و دستور العمل مشخص براى شخصيت هاى جهادي، علمى و سياسى کشور جهت، سوق ، اداره ورهبرى کشور و نجاتش از اين بحران خطر ناک  نوشته اند که ان شاءالله در وقت وزمانش به عنوان دايرة المعارفى از تجارب ومعلومات دلچسپ جهادى و مبارزاتى تقديم هموطنان  عزيز وجهان اسلام خواهد شد.
-در رابطه با وسعت و گستردگى حزب اسلامى افغانستان در عمق جامعۀ کشور ، تنها انعکاس همين حقيقت کافى خواهد بود که يک هيأت توظيف شدۀ ناتو،  در اوايل اپريل سال ٢٠٠٤ ميلادى طى بررسى و ارزيابى يى در مقايسه با ساير احزاب در کشور، در رابطه با حزب اسلامى افغانستان به اين نتيجه رسيدند که : حزب اسلامى افغانستان جايگاه (( %٨٥ )) نفوذ و استقرار در اين مرز و بوم را با طيب خاطر ، به خود اختصاص داده است .
-يقيناً که حزب اسلامى افغانستان در مدت زمان خيلى کوتاهى به قيمت ايثار، قربانى وتلاش هاى فراموش ناشدنى ، در مقايسه با ساير احزاب اسلامى در جهان نسبت به  حزب دو چند عمر دارند ، فاصله هاى طولانى و شگفت انگيزى را از رهگذر دستيابى  به اهداف خويش در عرصه هاى ملى وبين المللى کسب نموده است .
-چنانچه مرحوم سعيد حوى رهبر اخوان المسلمين در سوريه ٢٣ سال قبل طى سخنرانى اش در مسجد جامع نصرت مينه ، اعضا وکارکنان حزب اسلامى را مورد خطاب قرار داده و گفت که : ما از تجارب موفق و آمو زنده  حزب اسلامى در روند مبارزاتى خويش همواره  استفاده مى کنيم .
-خلاصه اينکه حزب اسلامى افغانستان باداشتن سابقۀ روشن، تابناک و درخشان، رهبرى خردمندانه، بيدار وحساس، افراد مخلص، مجاهد وفداکار، در تمامى ولايات افغانستان ودر سطح اکثر کشورها، همين اکنون فعال ومتحرک بوده وگفته مى توانيم که از زنده ترين و بانشاط ترين احزاب اسلامى دنيا بوده و مى باشد.
+یادښت: 
+د یادولو وړ ده، چې ښاغلي حکمتیار د افغانستان هغو مخورو، دینپوهانو، پخوانیو جهادي څېرو او نورو ته چې نن سبا په افغانستان یا بهر اوسېږي، څه باندې ۶۰۰۰ لیکونه لېږي، ترڅو لده سره په روانه ښکېلاک ضد جهاد کې مل شي، او د خپلو نیکونو تېر برم و شوکت یو ځبیا راژوندې کاندي. 
+دا لیکونه به په لنډ راتلونکې کې د یوه پوهنغونډ (دایرة المعارف په توګه د چاپ په ګاڼه وپسولل شي.
 
 ==دا هم وګورﺉ==
 
