--- a/د_افغانستان_اسلامي_حزب.mw
+++ b/د_افغانستان_اسلامي_حزب.mw
@@ -4,19 +4,19 @@
 ==د جوړښت پیلامه==
 د افغانستان اسلامي حزب په لومړنیو مراحلو کې د افغانستان له ۱۶ تنو کره، پوهو، کارنده او په اسلام و هېواد مینو ځوانو په کوښښ د کابل پوهنتو په انګړ کې بنسټ کېښودل شو.
 
-د غورځنګ په دې لومړي سر کې له یوه بل اږمیښت سره مخ شو، او هغه ددې غورځنګ د مخکښ (شهید عبدالرحیم نیازی) مړینه وه، چې د د ظاهرشاهي پیر د یوه څارګر ډاکټر لخوا د زهرو پیچکارۍ په کولو سره یې ناروغي نوره پسې وغځېده، او د سملاسي درملنې لپاره د هند هېواد ته ولېدول شو، مګر ژوند ورسره یاري ونکړه، او لې لورې یې جنازه بېرته د کابل پر لور راوړله.
+د غورځنګ په دې لومړي سر کې له یوه بل اږمیښت سره مخ شو، او هغه ددې غورځنګ د مخکښ (شهید [[عبدالرحیم نیازی]]) مړینه وه، چې د د ظاهرشاهي پیر د یوه څارګر ډاکټر لخوا د زهرو پیچکارۍ په کولو سره یې ناروغي نوره پسې وغځېده، او د سملاسي درملنې لپاره د هند هېواد ته ولېدول شو، مګر ژوند ورسره یاري ونکړه، او لې لورې یې جنازه بېرته د کابل پر لور راوړله.
 
-د شهيد نیازي له مړینې څخه وروسته د ۷۶۰ رایه ورکوونکو لخوا پینځو تنو هریو (شهید مولوي حبیب الرحمن، شهید انجینیر حبیب الرحمن، شهید سیف الدین نصرتیار، شهید غلام رباني عطیش او ښاغلي انجینیر ګلبدین حکمتیار) ته خپلې رای ورکړي.
+د شهيد نیازي له مړینې څخه وروسته د ۷۶۰ رایه ورکوونکو لخوا پینځو تنو هریو (شهید [[مولوي حبیب الرحمن،]] شهید [[انجینیر حبیب الرحمن،]] شهید [[سیف الدین نصرتیار،]] شهید [[غلام رباني عطیش]] او ښاغلي انجینیر ګلبدین حکمتیار) ته خپلې رای ورکړي.
 له پورته پینځو تنو څخ ټول په شهات رسېدلي، یواځې انجنییر صېب حکتیار تردې دمه د لوی څښتن په فضل ژوند دی، او ددې غورځنګ چارې او مشري سمبالوي. 
 
 ===د غورځنګ د شهیدو شویو غړو لیکلي اثار===
 د غورځنګ هغه برجسته غړي چې په شهادت رسول شوي، لاندې لیکنې ورځخه پاتې دی: 
-# د اقتصاد اهميت په اسلام او کمونيزم کښېـ لیکوال:استاد شهید عبدالرحيم نيازى 
-# جهان بينى اسلامى ـ لیکوا: شهید انجينير حبيب الرحمن.
-# حقايق و قضاوت ها ـ لیکوال: شهید انجينير حبيب الرحمن.
+# [[د اقتصاد اهميت په اسلام او کمونيزم کښې]]ـ لیکوال:استاد [[شهید عبدالرحيم نيازى]] 
+# جهان بينى اسلامى ـ لیکوا: شهید [[انجينير حبيب الرحمن]].
+# حقايق و قضاوت ها ـ لیکوال: شهید [[انجينير حبيب الرحمن]].
 # به شما اى فرزندان ميهن ـ لیکوال:ډاکټر محمدعمر.
 # حدوث جهان ـ لیکوال: شهيد اقا محمد عائل
-# مونږ او زمونږ دعوت ـ لیکوا: شهيد استاد عنايت الله>
+# مونږ او زمونږ دعوت ـ لیکوا: شهيد [[استاد عنايت الله]]>
 
 ==د حزب اجرایوی شوری==
 ==اوسنې حالت==
