*Empty MediaWiki Message*

--- a/ويکيپېډيا_ليکونکی.mw
+++ b/ويکيپېډيا_ليکونکی.mw
@@ -10,7 +10,7 @@
 
 [http://www.qamosona.com/  قاموسونه ټکی کام]
 
-[http://www.talafghan.com/  تل افغان ټکی کام]
+[http://www.talafghan.com/  ډاکتر ج ـ سمون]
 
 [[صادق موسی زی]]
 
