--- a/ويکيپېډيا_ليکونکی.mw
+++ b/ويکيپېډيا_ليکونکی.mw
@@ -11,7 +11,7 @@
 [http://www.qamosona.com/  قاموسونه ټکی کام]
 
 [http://www.talafghan.com/  ډاکتر ج ـ سمون]
-[ډاکتر ج ـ سمـون]
+[[ډاکتر ج ـ سمـون]]
 
 [[صادق موسی زی]]
 
