*Empty MediaWiki Message*

--- a/ويکيپېډيا_ليکونکی.mw
+++ b/ويکيپېډيا_ليکونکی.mw
@@ -9,9 +9,7 @@
 [[کارونکی:JALALKUT|عثمان منصور انصاري]]
 
 [http://www.qamosona.com/  قاموسونه ټکی کام]
-
-[http://www.talafghan.com/  ډاکتر ج ـ سمون]
-[[ډاکتر ج ـ سمـون]]
+[ډاکتر ج ـ سمـون]]
 
 [[صادق موسی زی]]
 
