*Empty MediaWiki Message*

--- a/ويکيپېډيا_ليکونکی.mw
+++ b/ويکيپېډيا_ليکونکی.mw
@@ -9,7 +9,8 @@
 [[کارونکی:JALALKUT|عثمان منصور انصاري]]
 
 [http://www.qamosona.com/  قاموسونه ټکی کام]
-[ډاکتر ج ـ سمـون]]
+
+[[ډاکتر ج ـ سمـون]]
 
 [[صادق موسی زی]]
 
