*Empty MediaWiki Message*

--- a/اسلام.mw
+++ b/اسلام.mw
@@ -1,12 +1,13 @@
 [[انځور:Mosque.Qibla.01.jpg|thumb|کيڼ|220px|مسلمانان د [[لمونځ|لمانځه]] د ادا کولو په وخت کې]]
 
-'''اسلام''' ([[عربي ژبه|عربي]]: {{Ar|الإسلام}}; ''{{ArabDIN|}}'' ({{Audio|ar-al_islam.ogg|غوږ شه!}}، "اطاعت" (د [[الله]] د رضا)) يو [[مونوتيزم|مونوتېسټېک]] (يانې د يو واحد څېښتن تعالی يا خدای تعالی ته د غاړې ايښودلو) عقيده ده. پخپله د اسلام وی په مانا د سولې، امن، سلامتي د ايمان او جوړې روغې رامنځته کول دي. دا د [[ابراهيمي دين]]ونو څخه يو دين دی او د نړۍ دوهم لوی [[مذهب]] ګڼل کېږي. د اسلام د دين لارويانو ته '''[[مسلمانان]]''' وايي. مسلمانان پدې عقيده دي چې [[الله]] انسانانو ته د لارښوونې هدايت د ډېرو [[پيغمبر]]انو په ذريعه کړی او [[محمد]] د الله تعالی تر ټولو وروستی پيغمبر ([[د اسلام پيغمبر]]) دی.
+'''اسلام''' ([[عربي ژبه|عربي]]: {{Ar|الإسلام}}; ''{{ArabDIN|}}'' ({{Audio|ar-al_islam.ogg|غوږ شه!}}، "اطاعت" (د [[الله]] د رضا)) يو [[مونوتيزم|مونوتېسټېک]] (يانې د يوه څښتن تعالی ته د غاړې ايښودلو) ګروهه (عقيده) ده. پخپله د اسلام وی د سولې، امن، سلامتۍ، روغې جوړې رامنځته کول دي. دا دین [[ابراهيمي دين]]ونو له ډلې څخه دی، چې د نړۍ په کچه دویم ستر [[مذهب]] ګڼل کېږي. د اسلام د دين لارويانو ته '''[[مسلمانان]]''' وايي. مسلمانان پدې ګروهه دي چې [[الله]] د انسانانو د لارښوونې لپاره وخت پر وخت، خپل استازي ([[پيغمبر]]ان) رالېږلي، چې هریو خپله دنده د الهي اوامرو په رڼا کې په بشپړه توګه سرته رسولې.
+د الهي استازو (پیغمرانو) وروستې استازې [[محمد]] صلی الله علیه وسلم دی.
 
-''اسلام'' په مانا د "تسليمي او اطاعت دی", او يا هم په بله وينا ځان د الله تعالی رضا ته تسليمول. د اسلام د دين لاروي ته [[مسلمان]] وييل کېږي، مانا دا چې "هغه څوک چې ځان يې الله تعالی ته سپارلی او تسليم کړی او د هغه د احکامو اطاعت کوي".<ref name="EoI-Islam">{{cite encyclopedia | title=Islam | encyclopedia=Encyclopaedia of Islam Online | author=L. Gardet | coauthors=J. Jomier | accessdate=2007-05-02}}</ref><ref name="Lanes Lexicon">{{cite web|url=http://www.studyquran.org/LaneLexicon/Volume4/00000137.pdf|title=Lane's lexicon |accessdate=2007-07-03}}</ref> په ټوله نړۍ کې د 1.1&nbsp;بيليون او 1.8&nbsp;بيليون ترمېنځ وګړي د اسلام د دين لارويان دي، چې په همدې توګه وروسته د عيسويت نه اسلام د نړۍ دوهم لوی دين ګڼل کېږي.<ref>{{cite web |url=http://www.adherents.com/Religions_By_Adherents.html#Islam |title=Major Religions of the World—Ranked by Number of Adherents |accessdate=2007-07-03 |format=HTML |work= }}</ref>
+''اسلام'' "تسليمۍ او غاړه اېښودنې ټه وایي", يا په بله وينا ځان د الله تعالی رضا ته تسليمول. د اسلام د دين لاروي ته [[مسلمان]] ويل کېږي، مانا دا چې "هغه څوک چې ځان يې الله تعالی ته سپارلی او د هغه د احکامو اطاعت کوي، مسلمان ګڼل کېږي".<ref name="EoI-Islam">{{cite encyclopedia | title=Islam | encyclopedia=Encyclopaedia of Islam Online | author=L. Gardet | coauthors=J. Jomier | accessdate=2007-05-02}}</ref><ref name="Lanes Lexicon">{{cite web|url=http://www.studyquran.org/LaneLexicon/Volume4/00000137.pdf|title=Lane's lexicon |accessdate=2007-07-03}}</ref> په ټوله نړۍ کې د 1.1&nbsp;بيليون او 1.8&nbsp;بيليون ترمېنځ وګړي د اسلام د دين لارويان دي، چې په همدې توګه وروسته د عيسويت نه اسلام د نړۍ دویم ستر دين ګڼل کېږي.<ref>{{cite web |url=http://www.adherents.com/Religions_By_Adherents.html#Islam |title=Major Religions of the World—Ranked by Number of Adherents |accessdate=2007-07-03 |format=HTML |work= }}</ref>
 
-مسلمانان په دې ګروهه دي چې الله تعالی قرآن مجيد پر حضرت محمد صلی الله عليه وسلم نازل کړی، او حضرت محمد صلی الله عليه وسلم د الله تعالی وروستی پيغمبر دی. مسلمانان پدې عقيده هم دي چې قرآن مجيد او سُنت (د حضرت محمد صلی الله عليه وسلم خبرې او اعمال) د اسلام بنسټيزې سرچينې دي.<ref>See:
+مسلمانان په دې ګروهه دي چې الله تعالی قرآن مجيد پر محمد صلی الله عليه وسلم نازل کړی، او حضرت محمد صلی الله عليه وسلم د الله تعالی وروستی پيغمبر دی. مسلمانان پدې عقيده هم دي چې قرآن مجيد او سُنت (د حضرت محمد صلی الله عليه وسلم خبرې او اعمال) د اسلام بنسټيزې سرچينې دي.<ref>See:
 *Esposito (1996), p.41
-*Ghamidi (2001): [http://www.renaissance.com.pk/JulRefl2y6.html Sources of Islam]</ref> مسلمانان په دې عقيده هم دي چې حضرت محمد صلی الله عليه وسلم د يوه نوي دين په توګه د اسلام د دين بنسټګر نه ؤ، خو نوموړی پيغمبر د هغه آرنۍ يوپرستښي ګروهې پرځای کوونکی دی چې پر زمکه يې بنسټ آدم عليه السلام ايښی چې بيا تر هغه وروسته ابراهيم عليه السلام او د هغه نه پخوانيو او وروستنيو، د الله ټولو پيغمبرانو يې د دغه دين او اصلي لارې بلنه ورکړې. مسلمانان دا عقيده لري چې په يهوديت او عيسويت کې د الله (ج) پيغام چې د بېلابېلو انبياو لخوا پر دوی نازل شوي، هغه د دوی لخوا د وخت په تېرېدو سره تحريف شوي، او ناسمه ترجماني يې شوې، که هغه په ليکلې بڼه وي او که پرته د ليکلې بڼې وي.<ref name="Distorted">See:
+*Ghamidi (2001): [http://www.renaissance.com.pk/JulRefl2y6.html Sources of Islam]</ref> مسلمانان په دې عقيده هم دي چې حضرت محمد صلی الله عليه وسلم د يوه نوي دين په توګه د اسلام د دين بنسټګر نه ؤ، خو نوموړی پيغمبر د هغه آرنۍ يو لمانځنې ګروهې پرځای کوونکی دی چې پر زمکه يې بنسټ آدم عليه السلام ايښی چې بيا تر هغه وروسته ابراهيم عليه السلام او د هغه نه پخوانيو او وروستنيو، د الله ټولو پيغمبرانو يې د دغه دين او اصلي لارې بلنه ورکړې. مسلمانان دا عقيده لري چې په يهوديت او عيسويت کې د الله (جل جلاله) پيغام چې د بېلابېلو انبياو لخوا پر دوی نازل شوي، هغه د دوی لخوا د وخت په تېرېدو سره تحريف شوي، او ناسمه ترجماني يې شوې، که هغه په ليکلې بڼه وي او که پرته د ليکلې بڼې وي.<ref name="Distorted">See:
 *Accad (2003): According to Ibn Taymiya, although only some Muslims accept the textual veracity of the entire Bible, most Muslims will grant the veracity of most of it.
 *Esposito (1998), pp.6,12
 *Esposito (2002b), pp.4–5
@@ -24,11 +25,11 @@
 {{اسلام}}
 
 ==آرپوهه==
-اسلام د عربي ژبې د درې تورو، {{ArabDIN|[[سين]]-[[لام]]-[[ميم]]}} ({{ar|'''س'''-'''ل'''-'''م'''}}) نه راوتلی. اسلام د همدغې ريښې يو تجريدي فعل دی چې مانا يې ده "تسليم يا ځان سپارل، څان خدای ته سپارل، اطاعت کول او د سولې" په مانا هم ده.
+اسلام د عربي ژبې د درې تورو، {{ArabDIN|[[سين]]-[[لام]]-[[ميم]]}} ({{ar|'''س'''-'''ل'''-'''م'''}}) نه راوتلی. اسلام د همدغې ريښې يو تجريدي فعل دی چې مانا يې ده "تسليم يا ځان سپارل، څان الله ته سپارل، اطاعت کول او د سولې" په مانا هم ده.
 
-کله چې د پورتني ويي د ريښو په هکله په نورو ژبو کې څېړنه کوو، نو بيا په عبراني ژبه کې د پورتني وييکي ضمني ماناګانې هم راوځي. په عبراني ژبه کې د ''[[شلوم]]'' ويي، د (شين-لامد-ميم) نه خپلې ريښې اخلي ({{Ivrit|'''ש'''-'''ל'''-'''ם'''}}). په ډېرو [[سېمېټک ژبو]] کې د همدغه لغت ضمني ماناګانې شته، چې مانا يې بشپړکېدل، پوره کېدل، سر ته رسېدنه، ښه اوسېدنه، هوسا اوسېدنه، يو داسې اصطلاح چې په ژباړه کې اکثراً د سولې د وييکي مانا په ځان کې رانغاړي، ورکوي.
+کله چې د پورتني ويي د ريښو په اړه په نورو ژبو کې څېړنه کوو، نو بيا په عبراني ژبه کې د پورتني وييکي ضمني ماناګانې هم راوځي. په عبراني ژبه کې د ''[[شلوم]]'' ويي، د (شين-لامد-ميم) نه خپلې ريښې اخلي ({{Ivrit|'''ש'''-'''ל'''-'''ם'''}}). په ډېرو [[سېمېټک ژبو]] کې د همدغه لغت ضمني ماناګانې شته، چې مانا يې بشپړکېدل، پوره کېدل، سر ته رسېدنه، ښه اوسېدنه، هوسا اوسېدنه، يو داسې اصطلاح چې په ژباړه کې اکثراً د سولې د وييکي مانا په ځان کې رانغاړي، ورکوي.
 
-په قرآن کې هم د اسلام د لغت د مانا بېلابېل تعبيرونه راغلي. په ځينو آيتونو کې  (''[[ayat]]''), the quality of Islam as an internal conviction is stressed: "الله تعالی که وغواړي چې د يو چا لارښونه وکړي، نو الله (ج) د هغه سينه د اسلام لپاره پراخه کوي."<ref>{{cite quran|6|125|style=ref}}, {{cite quran|61|7|style=ref}}, {{cite quran|39|22|style=ref}}</ref> نور آيتونه بيا ''اسلام'' او ''[[دين]]'' (اکثراً د "مذهب" په توګه ژباړل کېږي) د يو شي په توګه تعبيروي : "نن، ما ستاسو دين ستاسو لپاره مکمل کړ؛ ما ستاسو لپاره خپل د برکتونو اچول مکمل کړل؛ ما ستاسو لپار د اسلام دين غوره کړ."<ref>{{cite quran|5|3|style=ref}}, {{cite quran|3|19|style=ref}}, {{cite quran|3|83|style=ref}}</ref> ډېر نور خلک بيا اسلام داسې تعريفوي چې دا هغه دين دی چې انسان د همدې دين په مرسته بېرته الله تعالی ته ورستنېږي نسبت و دې ته چې د ايمان د اعمالو د تصديق په توګه وګڼلای شي.<ref>See:
+په قرآن کې هم د اسلام د لغت د مانا بېلابېل تعبيرونه راغلي. په ځينو آيتونو کې  (''[[ayat]]''), the quality of Islam as an internal conviction is stressed: "الله تعالی که وغواړي چې د يو چا لارښونه وکړي، نو الله (جل جلاله) د هغه سينه د اسلام لپاره پراخه کوي."<ref>{{cite quran|6|125|style=ref}}, {{cite quran|61|7|style=ref}}, {{cite quran|39|22|style=ref}}</ref> نور آيتونه بيا ''اسلام'' او ''[[دين]]'' (اکثراً د "مذهب" په توګه ژباړل کېږي) د يو شي په توګه تعبيروي : "نن، ما ستاسو دين ستاسو لپاره مکمل کړ؛ ما ستاسو لپاره خپل د برکتونو اچول مکمل کړل؛ ما ستاسو لپار د اسلام دين غوره کړ."<ref>{{cite quran|5|3|style=ref}}, {{cite quran|3|19|style=ref}}, {{cite quran|3|83|style=ref}}</ref> ډېر نور خلک بيا اسلام داسې تعريفوي چې دا هغه دين دی چې انسان د همدې دين په مرسته بېرته الله تعالی ته ورستنېږي نسبت و دې ته چې د ايمان د اعمالو د تصديق په توګه وګڼلای شي.<ref>See:
 * {{cite quran|9|74|style=ref}}, {{cite quran|49|14|style=ref}}
 * {{cite encyclopedia | title=Islam | encyclopedia=Encyclopaedia of Islam Online | author=L. Gardet | coauthors=J. Jomier | accessdate=2007-05-02}}</ref>
 
@@ -41,7 +42,7 @@
 
 ==عقيده==
 {{main|عقيده}}
-د اسلام بنسټيزه عقيده شهادت دی چې د ګواهۍ مانا لري [[شهادت]] ('''  لا إله إلا الله محمد رسول الله ''')"نشته بل کوم خدای يا معبود پرته د الله نه او محمد صلی الله عليه وسلم د الله پيغمبر دی." د دې لپاره چې څوک مسلمان شي، نو سړي ته پکار ده چې دغه پورتنی شهادت د يو څو شاهدانو مخکې ووايي او پرې ايمان راوړي. او که چېرته يو څوک غواړي چې اسلام ته راشي نو هغه يا هغې ته پکار ده چې بايد د زړه له صدق نه وغواړي او بيا د دې نه مخکې چې شهادت ووايي نو پکار ده چې د شهادت په اصلي مانا او مفهوم پوه وي.<br>
+د اسلام بنسټيزه عقيده شهادت دی چې د ګواهۍ مانا لري [[شهادت]] ('''  لا إله إلا الله محمد رسول الله ''')"نشته بل کوم څښټتن يا معبود پرته د الله نه او محمد صلی الله عليه وسلم د الله پيغمبر دی." د دې لپاره چې څوک مسلمان شي، نو سړي ته پکار ده چې دغه پورتنی شهادت د يو څو شاهدانو مخکې ووايي او پرې ايمان راوړي. او که چېرته يو څوک غواړي چې اسلام ته راشي نو هغه يا هغې ته پکار ده چې بايد د زړه له صدق نه وغواړي او بيا د دې نه مخکې چې شهادت ووايي نو پکار ده چې د شهادت په اصلي مانا او مفهوم پوه وي.<br>
 مسلمانان په دې عقيده دي چې الله (ج) انسانانو ته خپل پيغام د حضرت محمد (ص) او د نورو پيغمبرانو لخوا لکه حضرت آدم عليه السلام، حضرت نوح عليه السلام، حضرت ابراهيم عليه السلام، حضرت موسی عليه السلام او حضرت عيسی عليه السلام له لورې په بېلابېلو وختونو کې رالېږلی. مسلمانان په دې عقيده هم دي چې حضرت محمد صلی الله عليه وآله وسلم د الله وروستنی پيغمبر و او د هغه نه وروسته تر قيامته بل هېڅ کوم پيغمبر نه راځي. نو ددې پخاطر مسلمانان بايد د حضرت محمد صلی الله عليه وآله وسلم په لارښوونې تر قيامته پورې عمل وکړي.
 <br>
 مسلمانان پدې عقيده دي چې قران د انسانانو د لارښوونې يو داسې کتاب دی چې تر اوسه پکې هېچا ګوتې نه دي وهلي او پدې کتاب کې هېڅ کومه نيمګړتيا نشته، او هېڅ کله به پکې بدلون را نه شي، او دا د خدای له لورې انسانانو ته وروستی نازل شوی کتاب دی. مسلمانان دا هم وايي چې د انجيل او تورات هغه اسماني کتابونه دي چې د بېلابېلو مذهبي فرقو له لورې پکې لاسوهنې شوي په بل ډول سره ليکل شوي او په ناسمه توګه تعبير شوي او د دغو اسماني کتابونو اصلي بڼې اوس نه شته او د وخت په تېرېدو سره خلکو هماغه لومړني لارښوونې چې په اصلي اسماني کتابونو کې وه هېر کړي، او يا يې هم درغلي پکې کړې. نو ددغه ليد پر بنسټ الله تعالی انسانانو ته د لارښوونې لپاره قرآن راولېږه چې په دې کې هماغه د اصلي انجيل او تورات لارښوونو سره سره د هغو وختونو د خلکو چې پېغمبران به يې ځورول او وژل به يې او د الله تعالی له احکامو د سرغړونې سره سره يې د خپل زاتي ګټو لپاره د الله په کلام کې چې بدعتونه راوستلي دا ټول تاريخ ثبت دی. 
